--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,19 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
+    // Moshi
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.12.0"
+
+
+    ///////////////////////Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // Logging
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
