add general response

--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ buildscript {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.5'
         def nav_version = "2.4.1"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.0'
-        classpath 'com.google.gms:google-services:4.3.10'
+//        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.0'
+//        classpath 'com.google.gms:google-services:4.3.10'
 
 
 
