--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ plugins {
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
-    id 'com.google.gms.google-services'
-    id 'com.google.firebase.crashlytics'
+//    id 'com.google.gms.google-services'
+//    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -36,6 +36,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
 }
 
 dependencies {
@@ -47,6 +52,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
 
     // Jetpack Navigation
     def nav_version = "2.4.1"
@@ -57,6 +68,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
+    // Coil
+    implementation "io.coil-kt:coil-compose:1.3.2"
+    implementation "io.coil-kt:coil-svg:1.3.2"
+
     // Data Store
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
@@ -64,14 +79,22 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.40.5"
     kapt "com.google.dagger:hilt-compiler:2.40.5"
 
+    // SDP
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+
+    // Room database by rx
+    implementation "androidx.room:room-runtime:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
+
     // Paging 3
     implementation "androidx.paging:paging-runtime-ktx:3.1.0"
 
-    //Firebase
-    implementation platform('com.google.firebase:firebase-bom:29.1.0')
-    implementation "com.google.firebase:firebase-core"
-    implementation 'com.google.firebase:firebase-crashlytics-ktx'
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+//    //Firebase
+//    implementation platform('com.google.firebase:firebase-bom:29.1.0')
+//    implementation "com.google.firebase:firebase-core"
+//    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+//    implementation 'com.google.firebase:firebase-analytics-ktx'
 
     // Moshi
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
